--- a/public/contact.html
+++ b/public/contact.html
@@ -1,6 +1,6 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +14372421530</p>
+<p>Email: rabbanibasha786@@gmail.com</p>
 <p>Address:</p>
 <p>
   123 North Street<br />
